@@ -1,15 +1,18 @@
 # Input/Output configuration
 # --------------------------
-rootclass=wcet.StartKfl
+root-class=wcet.StartKfl
+projectname=wcet.StartKfl_measure
+target-method=wcet.StartKfl.measure
+
+# whether to perform DFA
 dataflow-analysis=no
 
 # java classpath (parent directory for looking up class files)
-
 cp=java/target/dist/classes/
 
 # path for looking up source files
 
-sp=java/target/src/common:java/target/src/bench:java/target/src/jdk_base:java/target/src/jdk11:java/target/src/rtapi:java/target/src/test
+sp=java/target/src/app:java/target/src/common:java/target/src/bench:java/target/src/jdk_base:java/target/src/jdk11:java/target/src/rtapi:java/target/src/test
 
 # directory or parent directory for generating output files (if reports should be generated)
 
@@ -27,8 +30,8 @@ reportdir-parent=java/target/wcet/
 #program-dot=/opt/local/bin/dot
 
 
-# It might be more convenient to set the options below using command line parameters, 
-# e.g. -rootclass wcet.KflApp
+# uppaal verifier
+uppaal-verifier=/Users/benedikt/Programs/UPAAL/verifyta
 
 # Analysis options
 # ---------------
@@ -45,30 +48,6 @@ cache-block-size-words=64
 # Additional flags
 # ----------------
 dump-ilp = yes
-
-
-# Target
-# ------
-
-# The fully-qualified name of the class which implements the method to be analyzed
-#rootclass=wcet.StartKfl
-
-# The name of the (static) method to be analyzed. If the signature is missing,
-# we search for the method, defaulting to 'measure'.
-#rootmethod=measure
-
-# Sim=Estim: 104 (58 + 46)
-#rootclass=wcet.OneStmt
-
-# Sim=Estim: 1439 (1393 + 46)  
-#rootclass=wcet.Loop
-
-# Sim: 122 (101+21)
-# rasmus: 122
-# AH,AM,Estim: 122,123,122
-#rootclass=wcet.SimpleMethod
-
-#rootclass=wcet.Method
 
 # Additional log4j configuration
 # ----------------------------------
